--- a/pom.xml
+++ b/pom.xml
@@ -65,12 +65,14 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <version>1.0.0.RELEASE</version>
         </dependency>
 
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <version>2.2.4.RELEASE</version>
             <scope>test</scope>
         </dependency>
 
