--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,13 @@
     </properties>
 
     <dependencies>
+             
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifact Id>
+            <version>1.2</version>
+        </dependency>
+             
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
